--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- Import Bootstrap CSS -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/../node_modules/bootstrap/dist/css/bootstrap.min.css" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <!-- Import Bootstrap JavaScript -->
-    <script src="%PUBLIC_URL%/../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="%PUBLIC_URL%/../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
     <div id="root"></div>    
   </body>
 </html>
