--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- Import Bootstrap CSS -->
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/../node_modules/bootstrap/dist/css/bootstrap.min.css" /> -->
+    <title>社服基金補助單</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
